--- a/popalign.ipynb
+++ b/popalign.ipynb
@@ -52,6 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Perform column normalization\n",
+    "Find best normalization factor\n",
+    "'''\n",
     "PA.normalize(pop)"
    ]
   },
@@ -61,7 +65,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PA.plot_gene_filter(pop, offset=1.22)"
+    "'''\n",
+    "Plot genes (log cv ~ log cv) and filtering\n",
+    "line --use multiple times to find best offset\n",
+    "(usually between .7 and 1.5)\n",
+    "'''\n",
+    "PA.plot_gene_filter(pop, offset=1)"
    ]
   },
   {
@@ -70,6 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Gene filter the data with the last\n",
+    "offset used in the previous step\n",
+    "'''\n",
     "PA.filter(pop)"
    ]
   },
@@ -79,6 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Remove red blood cells from the data\n",
+    "'''\n",
     "PA.removeRBC(pop, 'human')"
    ]
   },
@@ -88,6 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Generate multiple feature spaces and pick\n",
+    "'''\n",
     "PA.onmf(pop, ncells=5000, nfeats=[5,7], nreps=2, niter=300)"
    ]
   },
@@ -107,15 +126,6 @@
    "outputs": [],
    "source": [
     "PA.entropy(pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop['samples']['Meprednisone']['alignments']"
    ]
   },
   {
