--- a/popalign.ipynb
+++ b/popalign.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Load separate samples\n",
+    "- Load data (example)\n",
     "'''\n",
     "LOAD = 'screen'\n",
     "\n",
@@ -53,8 +53,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Perform column normalization\n",
-    "Find best normalization factor\n",
+    "-  Perform column normalization\n",
+    "-  Find best normalization factor\n",
     "'''\n",
     "PA.normalize(pop)"
    ]
@@ -66,9 +66,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Plot genes (log cv ~ log cv) and filtering\n",
-    "line --use multiple times to find best offset\n",
-    "(usually between .7 and 1.5)\n",
+    "- Plot genes (log cv ~ log cv) and filtering line --use multiple times to find best offset (usually between .7 and 1.5)\n",
     "'''\n",
     "PA.plot_gene_filter(pop, offset=1)"
    ]
@@ -80,8 +78,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Gene filter the data with the last\n",
-    "offset used in the previous step\n",
+    "- Gene filter the data with the last offset used in the previous step\n",
     "'''\n",
     "PA.filter(pop)"
    ]
@@ -93,7 +90,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Remove red blood cells from the data\n",
+    "- Remove red blood cells from the data\n",
     "'''\n",
     "PA.removeRBC(pop, 'human')"
    ]
@@ -105,7 +102,9 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Generate multiple feature spaces and pick\n",
+    "- Generate multiple feature spaces and pick the best one based on reconstruction error\n",
+    "- Run GSEA on each feature\n",
+    "- Generate QC plots\n",
     "'''\n",
     "PA.onmf(pop, ncells=5000, nfeats=[5,7], nreps=2, niter=300)"
    ]
@@ -116,7 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PA.build_gmms(pop, ks=(5,20), nreps=3)"
+    "'''\n",
+    "- Build a Gaussian Mixture model for each sample\n",
+    "- Type the models subpopulations\n",
+    "'''\n",
+    "PA.build_gmms(pop, ks=(5,20), nreps=3, reg_covar=False, rendering='grouped', types=None)"
    ]
   },
   {
@@ -125,6 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "- Calculate all the subpopulations entropies for each samples\n",
+    "'''\n",
     "PA.entropy(pop)"
    ]
   },
@@ -134,6 +140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "- Align subpopulations of each sample against a reference model's subpopulations\n",
+    "'''\n",
     "PA.align(pop, ref='CTRL', method='conservative')"
    ]
   },
@@ -143,6 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "- Rank each sample against a reference sample's model\n",
+    "'''\n",
     "PA.rank(pop, ref='CTRL')"
    ]
   },
@@ -152,6 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    " - Build a unique GMM for the samples concatenated together\n",
+    "'''\n",
     "PA.build_unique_gmm(pop, ks=(5,20), nreps=3, reg_covar=False, groups=None)"
    ]
   },
@@ -163,6 +178,9 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "Generate a query plot\n",
+    "'''\n",
     "PA.plot_query(pop)"
    ]
   },
@@ -172,6 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "- Interactive 3D visualization of the data in feature space\n",
+    "'''\n",
     "PA.plotfeatures(pop)"
    ]
   }
