--- a/popalign.ipynb
+++ b/popalign.ipynb
@@ -18,10 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Load data (example)\n",
-    "'''\n",
-    "LOAD = 'screen'\n",
+    "# Load data (example)\n",
+    "LOAD = 'samples'\n",
     "\n",
     "if LOAD == 'samples':\n",
     "    mysamples = {\n",
@@ -52,10 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "-  Perform column normalization\n",
-    "-  Find best normalization factor\n",
-    "'''\n",
+    "# Perform column normalization\n",
+    "# Find best normalization factor\n",
     "PA.normalize(pop)"
    ]
   },
@@ -65,9 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Plot genes (log cv ~ log cv) and filtering line --use multiple times to find best offset (usually between .7 and 1.5)\n",
-    "'''\n",
+    "# Plot genes (log cv ~ log cv) and filtering line --use multiple times to find best offset (usually between .7 and 1.5)\n",
     "PA.plot_gene_filter(pop, offset=1)"
    ]
   },
@@ -77,9 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Gene filter the data with the last offset used in the previous step\n",
-    "'''\n",
+    "# Gene filter the data with the last offset used in the previous step\n",
     "PA.filter(pop)"
    ]
   },
@@ -89,9 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Remove red blood cells from the data\n",
-    "'''\n",
+    "# Remove red blood cells from the data\n",
     "PA.removeRBC(pop, 'human')"
    ]
   },
@@ -101,11 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Generate multiple feature spaces and pick the best one based on reconstruction error\n",
-    "- Run GSEA on each feature\n",
-    "- Generate QC plots\n",
-    "'''\n",
+    "# Generate multiple feature spaces and pick the best one based on reconstruction error\n",
+    "# Run GSEA on each feature\n",
+    "# Generate QC plots\n",
     "PA.onmf(pop, ncells=5000, nfeats=[5,7], nreps=2, niter=300)"
    ]
   },
@@ -115,10 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Build a Gaussian Mixture model for each sample\n",
-    "- Type the models subpopulations\n",
-    "'''\n",
+    "# Build a Gaussian Mixture model for each sample\n",
+    "# Type the models subpopulations\n",
     "PA.build_gmms(pop, ks=(5,20), nreps=3, reg_covar=False, rendering='grouped', types=None)"
    ]
   },
@@ -128,9 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Calculate all the subpopulations entropies for each samples\n",
-    "'''\n",
+    "# Calculate all the subpopulations entropies for each samples\n",
     "PA.entropy(pop)"
    ]
   },
@@ -140,9 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Align subpopulations of each sample against a reference model's subpopulations\n",
-    "'''\n",
+    "# Align subpopulations of each sample against a reference model's subpopulations\n",
     "PA.align(pop, ref='CTRL', method='conservative')"
    ]
   },
@@ -152,9 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Rank each sample against a reference sample's model\n",
-    "'''\n",
+    "# Rank each sample against a reference sample's model\n",
     "PA.rank(pop, ref='CTRL')"
    ]
   },
@@ -164,9 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    " - Build a unique GMM for the samples concatenated together\n",
-    "'''\n",
+    "# Build a unique GMM for the samples concatenated together\n",
     "PA.build_unique_gmm(pop, ks=(5,20), nreps=3, reg_covar=False, groups=None)"
    ]
   },
@@ -178,9 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "'''\n",
-    "Generate a query plot\n",
-    "'''\n",
+    "# Generate a query plot\n",
     "PA.plot_query(pop)"
    ]
   },
@@ -190,9 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "- Interactive 3D visualization of the data in feature space\n",
-    "'''\n",
+    "# Interactive 3D visualization of the data in feature space\n",
     "PA.plotfeatures(pop)"
    ]
   }
