--- a/popalign.ipynb
+++ b/popalign.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Rank each sample against a reference sample's model\n",
-    "PA.rank(pop, ref='CTRL')"
+    "PA.rank(pop, ref=None, k=100, niter=200, mincells=50)"
    ]
   },
   {
