--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -35,10 +35,30 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('./methods/')\n",
+    "#import sys\n",
+    "#sys.path.append('./popalign/')\n",
     "import popalign as PA\n",
     "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/paul/Documents/popalign/popalign/__init__.py'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PA.__file__"
    ]
   },
   {
@@ -198,6 +218,8 @@
    "outputs": [],
    "source": [
     "# Interactive 3D visualization of the data in feature space\n",
+    "import plotly\n",
+    "plotly.offline.init_notebook_mode()\n",
     "PA.plotfeatures(pop)"
    ]
   },
