scaling factor change

--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "# Perform column normalization\n",
     "# Find best normalization factor\n",
-    "PA.normalize(pop)"
+    "PA.normalize(pop, scaling_factor=None)"
    ]
   },
   {
