--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -71,8 +71,9 @@
     "                         metafile=mymetadata, \n",
     "                         genes=mygenes,\n",
     "                         outputfolder='output_screen',\n",
-    "                         col='CD3',\n",
-    "                         value=1)"
+    "                         only=[], # list of sample names to only load the specified samples\n",
+    "                         col='CD3', # either None or a column name from the meta data\n",
+    "                         value=1) # if col != None, specify value in column to filter samples"
    ]
   },
   {
