--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -66,11 +66,11 @@
     "    mybarcodes = '../data/screen/PBMC-MULT-6/barcodes.tsv'\n",
     "    mygenes = '../data/screen/PBMC-MULT-6/genes.tsv'\n",
     "    mymetadata = '../data/screen/PBMC-MULT-6/updated_meta.csv'\n",
-    "    pop = PA.load_screen(matrix=mymatrix, \n",
+    "    pop = PA.load_mutiplexed(matrix=mymatrix, \n",
     "                         barcodes=mybarcodes, \n",
     "                         metafile=mymetadata, \n",
     "                         genes=mygenes,\n",
-    "                         outputfolder='output_screen',\n",
+    "                         outputfolder='output_multiplexed',\n",
     "                         only=[], # list of sample names to only load the specified samples\n",
     "                         col='CD3', # either None or a column name from the meta data\n",
     "                         value=1) # if col != None, specify value in column to filter samples"
