--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -201,10 +201,6 @@
       "......... Iteration #0\n",
       "......... Iteration #0\n",
       "......... Iteration #0\n",
-      "......... Iteration #0\n",
-      "......... Iteration #0\n",
-      "......... Iteration #100\n",
-      "......... Iteration #100\n",
       "......... Iteration #100\n",
       "......... Iteration #100\n",
       "......... Iteration #100\n",
@@ -223,17 +219,13 @@
       "......... Iteration #300\n",
       "......... Iteration #300\n",
       "......... Iteration #300\n",
-      "......... Iteration #200\n",
-      "......... Iteration #200\n",
       "......... Iteration #400\n",
       "......... Iteration #400\n",
       "......... Iteration #400\n",
       "......... Iteration #400\n",
       "......... Iteration #400\n",
       "......... Iteration #400\n",
-      "......... Iteration #300\n",
       "......... Iteration #499\n",
-      "......... Iteration #300\n",
       "Orthogonal NMF performed with 500 iterations\n",
       "\n",
       "......... Iteration #499\n",
@@ -242,43 +234,25 @@
       "\n",
       "Orthogonal NMF performed with 500 iterations\n",
       "\n",
-      "......... Iteration #0\n",
-      "......... Iteration #499\n",
-      "Orthogonal NMF performed with 500 iterations\n",
-      "\n",
-      "......... Iteration #499\n",
-      "Orthogonal NMF performed with 500 iterations\n",
-      "\n",
-      "......... Iteration #499\n",
-      "Orthogonal NMF performed with 500 iterations\n",
-      "\n",
-      "......... Iteration #400\n",
-      "......... Iteration #400\n",
-      "......... Iteration #100\n",
       "......... Iteration #499\n",
       "......... Iteration #499\n",
       "Orthogonal NMF performed with 500 iterations\n",
       "\n",
       "Orthogonal NMF performed with 500 iterations\n",
       "\n",
-      "......... Iteration #200\n",
-      "......... Iteration #300\n",
-      "......... Iteration #400\n",
       "......... Iteration #499\n",
       "Orthogonal NMF performed with 500 iterations\n",
       "\n",
       "Computing reconstruction errors\n",
       "Retrieving W with lowest error\n",
       "Starting gene set enrichment analysis\n",
-      "0 GO_LYMPHOCYTE_COSTIMULATION\n",
-      "1 GO_NEGATIVE_REGULATION_OF_STEROL_TRANSPORT\n",
-      "2 GO_PLATELET_AGGREGATION\n",
-      "3 GO_TISSUE_HOMEOSTASIS\n",
-      "4 GO_REGULATION_OF_T_CELL_MEDIATED_CYTOTOXICITY\n",
-      "5 GO_REGULATION_OF_CELL_DEATH\n",
-      "6 GO_MAINTENANCE_OF_LOCATION\n",
-      "7 GO_RESPONSE_TO_OXIDATIVE_STRESS\n",
-      "8 GO_PLATELET_DEGRANULATION\n"
+      "0 GO_POSITIVE_REGULATION_OF_RESPONSE_TO_STIMULUS\n",
+      "1 GO_IRON_ION_HOMEOSTASIS\n",
+      "2 GO_MACROMOLECULAR_COMPLEX_REMODELING\n",
+      "3 GO_ANTIGEN_PROCESSING_AND_PRESENTATION_OF_ENDOGENOUS_PEPTIDE_ANTIGEN\n",
+      "4 GO_HOMEOSTATIC_PROCESS\n",
+      "5 GO_LEUKOCYTE_MIGRATION_INVOLVED_IN_INFLAMMATORY_RESPONSE\n",
+      "6 GO_LYMPHOCYTE_COSTIMULATION\n"
      ]
     }
    ],
@@ -286,7 +260,7 @@
     "# Generate multiple feature spaces and pick the best one based on reconstruction error\n",
     "# Run GSEA on each feature\n",
     "# Generate QC plots\n",
-    "PA.onmf(pop, ncells=5000, nfeats=[5,7,9], nreps=3, niter=500)"
+    "PA.onmf(pop, ncells=5000, nfeats=[5,7], nreps=3, niter=500)"
    ]
   },
   {
@@ -298,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +334,7 @@
     "              nreplicates=1,\n",
     "              reg_covar=True, \n",
     "              rendering='grouped', \n",
-    "              types='defaultpbmc', # either None, 'defaultpbmc' or a dictionary\n",
+    "              types=None, # either None, 'defaultpbmc' or a dictionary\n",
     "              figsizegrouped=(20,20),\n",
     "              figsizesingle=(6,5))"
    ]
@@ -384,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,13 +441,13 @@
     "                    niters=3, \n",
     "                    training=0.2, \n",
     "                    reg_covar=True, \n",
-    "                    types='defaultpbmc', # either None, 'defaultpbmc' or a dictionary\n",
+    "                    types=None, # either None, 'defaultpbmc' or a dictionary\n",
     "                    figsize=(6,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
