update rank ref replicate use

--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -291,11 +291,12 @@
    "source": [
     "# Build a Gaussian Mixture model for each sample\n",
     "# Type the models subpopulations\n",
+    "importlib.reload(PA)\n",
     "PA.build_gmms(pop, \n",
     "              ks=(4,7), \n",
     "              niters=1, \n",
     "              training=.8, \n",
-    "              nreplicates=0,\n",
+    "              nreplicates=1,\n",
     "              reg_covar=True, \n",
     "              rendering='grouped', \n",
     "              types='defaultpbmc', # either None, 'defaultpbmc' or a dictionary\n",
@@ -406,9 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yeehaw\n"
+     ]
+    }
+   ],
    "source": [
     "# Rank each sample against a reference sample's model\n",
     "importlib.reload(PA)\n",
@@ -419,6 +428,30 @@
     "        method='LLR', # LLR for log-likelihood ratio or LL for log-likelihood\n",
     "        mincells=50, # sample's minimum number of cells to be ranked\n",
     "        figsize=(10,5)) # plot figure size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianMixture(covariance_type='full', init_params='kmeans', max_iter=10000,\n",
+       "                means_init=None, n_components=4, n_init=10,\n",
+       "                precisions_init=None, random_state=None,\n",
+       "                reg_covar=0.31741283880121474, tol=0.001, verbose=0,\n",
+       "                verbose_interval=10, warm_start=False, weights_init=None)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop['samples']['CTRL']['replicates'][0]['gmm']"
    ]
   },
   {
@@ -455,6 +488,26 @@
    "source": [
     "# Generate a query plot\n",
     "PA.plot_query(pop,  pcells=.2, nreps=10, figsize=(5,20), sharey=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2D visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(PA)\n",
+    "PA.scatter(pop, method='umap', color='CD3D')\n",
+    "PA.scatter(pop, method='umap', color='LYZ')\n",
+    "PA.scatter(pop, method='tsne', color='CD3D')\n",
+    "PA.scatter(pop, method='tsne', color='LYZ')"
    ]
   },
   {
