--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -479,20 +479,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "172.0185408592224\n",
-      "32738\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get list of differentially expressed genes between a reference subpopulation\n",
     "# and a sample's subpopulation that aligned to it\n",
@@ -504,8 +495,43 @@
     "                      sample=sample,\n",
     "                      nbins=20, \n",
     "                      cutoff=1,\n",
-    "                      renderhists=False,\n",
-    "                      usefiltered=False)"
+    "                      renderhists=True,\n",
+    "                      usefiltered=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "downregulated = [4,7,9,10]\n",
+    "upregulated = [2,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['downregulated',\n",
+       " 'downregulated',\n",
+       " 'downregulated',\n",
+       " 'downregulated',\n",
+       " 'upregulated',\n",
+       " 'upregulated']"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['downregulated']*len(downregulated)+['upregulated']*len(upregulated)"
    ]
   },
   {
