--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PA.print_ncells_ncells(pop)"
+    "PA.print_ncells(pop)"
    ]
   },
   {
@@ -296,6 +296,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Grid of samples in embedding space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(PA)\n",
+    "PA.embedding_grid(pop, method='tsne', figsize=(20,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PA.embedding_grid(pop, method='umap', figsize=(20,20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Build probabilistic models"
    ]
   },
@@ -414,8 +440,8 @@
     "ref: Name of reference sample\n",
     "method: Method to perform the alignment\n",
     "    If 'conservative', the reference component and the test component have to be each other's best match to align\n",
-    "    If 'aligntest', the closest reference component is found for each test component\n",
-    "    If 'alignref', the closest test component is found for each test component\n",
+    "    If 'test2ref', the closest reference component is found for each test component\n",
+    "    If 'ref2test', the closest test component is found for each test component\n",
     "figsizedeltas: Size of the figure for the delta plot. Default is (10,5)\n",
     "figsizeentropy: Size of the figure for the entropy plot. Default is (10,5)\n",
     "'''\n",
@@ -428,7 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {
     "scrolled": true
    },
@@ -444,32 +479,14 @@
     "                      refcomp=refcomp,\n",
     "                      sample=sample,\n",
     "                      nbins=20,\n",
-    "                      cutoff=1,\n",
+    "                      cutoff=0.9,\n",
     "                      renderhists=True,\n",
     "                      usefiltered=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(PA)\n",
-    "refcomp = 4\n",
-    "sample = 'Bimatoprost'\n",
-    "genelist = PA.diffexp(pop,\n",
-    "                      refcomp=refcomp,\n",
-    "                      sample=sample,\n",
-    "                      nbins=20,\n",
-    "                      cutoff=0.75,\n",
-    "                      renderhists=False,\n",
-    "                      usefiltered=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +494,8 @@
     "PA.plot_heatmap(pop,\n",
     "                refcomp=refcomp,\n",
     "                genelist=genelist,\n",
-    "                cluster=True, \n",
+    "                clustersamples=True,\n",
+    "                clustercells=False,\n",
     "                savename='%d_%s' % (refcomp,sample) ,# either None or a string\n",
     "                figsize=(20,20),\n",
     "                cmap='Purples',\n",
@@ -593,13 +611,6 @@
     "PA.scatter(pop, method='tsne', color='CD3D')\n",
     "PA.scatter(pop, method='tsne', color='LYZ')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
