--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -1278,8 +1278,10 @@
     "# Highlight markers in an embedded space\n",
     "PA.scatter(pop, method='umap', color='CD3D')\n",
     "PA.scatter(pop, method='umap', color='LYZ')\n",
+    "scatter(pop, method='umap', sample='CONTROL', compnumber=0, color='CD3D')\n",
     "PA.scatter(pop, method='tsne', color='CD3D')\n",
-    "PA.scatter(pop, method='tsne', color='LYZ')"
+    "PA.scatter(pop, method='tsne', color='LYZ')\n",
+    "scatter(pop, method='tsne', sample='CONTROL', compnumber=0, color='CD3D')"
    ]
   },
   {
@@ -1714,118 +1716,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scatter(pop, method='umap', sample=None, compnumber=None, color=None, size=.1):\n",
-    "    '''\n",
-    "    Run an embedding algorithm and plot the data in a scatter plot\n",
-    "\n",
-    "    pop: dict\n",
-    "        Popalign object\n",
-    "    method : str\n",
-    "        Embedding method. One of umap, tsne. Defaults to umap\n",
-    "    color : str\n",
-    "        Either `samples` or a valid gene symbol. Defaults to None\n",
-    "    size : float or int\n",
-    "        Point size. Defaults to .1\n",
-    "    '''\n",
-    "\n",
-    "    if method not in pop: # if method not run before\n",
-    "        X = cat_data(pop, 'C') # retrieve feature space data\n",
-    "        if method == 'umap': # if method is umap\n",
-    "            X = umap.UMAP().fit_transform(X) # run umap\n",
-    "        elif method == 'tsne': # if method is tsne\n",
-    "            X = TSNE(n_components=2).fit_transform(X) # run tsne\n",
-    "        else: # if method not valid\n",
-    "            raise Exception('Method value not supported. Must be one of tsne, umap.') # raise exception\n",
-    "        pop[method] = X # store embedded coordinates\n",
-    "    else: # if method has been run before\n",
-    "        X = pop[method] # retrieve embedded coordinates\n",
-    "        \n",
-    "    if sample != None: # if a sample is provided\n",
-    "        M = pop['samples'][sample]['M'] # get matrix\n",
-    "        idx = pop['samples'][sample]['indices'] # get cells indices of that sample\n",
-    "        start = idx[0] # get start index\n",
-    "        end = idx[1] # get end index\n",
-    "        xsample = X[start:end,0] # subset embedded coordinates\n",
-    "        ysample = X[start:end,1] # subset embedded coordinates\n",
-    "        \n",
-    "        if compnumber != None:\n",
-    "            gmm = pop['samples'][sample]['gmm']\n",
-    "            C = pop['samples'][sample]['C']\n",
-    "            prediction = gmm.predict(C)\n",
-    "            idx = np.where(prediction==compnumber)[0]\n",
-    "            M = M[:,idx] # only keep cells from component\n",
-    "            xsample = xsample[idx]\n",
-    "            ysample = ysample[idx]\n",
-    "    else:\n",
-    "        M = PA.cat_data(pop,'M')\n",
-    "        \n",
-    "    if color:\n",
-    "        try:\n",
-    "            ig = np.where(pop['genes']==color)[0][0] # get gene index if valid gene name\n",
-    "            c = M[ig,:].toarray().flatten() # get expression values of gene\n",
-    "            cmap = 'magma'\n",
-    "        except:\n",
-    "            raise Exception('Gene name not valid') # raise exception if gene name not valid\n",
-    "    else:\n",
-    "        c = 'red'\n",
-    "        cmap = None\n",
-    "    \n",
-    "    if not sample:\n",
-    "        plt.scatter(X[:,0], X[:,1], c=c, cmap=cmap, s=size)\n",
-    "    else:\n",
-    "        plt.scatter(X[:,0], X[:,1], c='lightgrey', cmap=cmap, s=size)\n",
-    "        plt.scatter(xsample, ysample, c=c, cmap=cmap, s=size)\n",
-    "    \n",
-    "    plt.xticks([]) # remove x ticks\n",
-    "    plt.yticks([]) # remove y ticks\n",
-    "    plt.xlabel('%s 1' % method) # x label\n",
-    "    \n",
-    "    plt.ylabel('%s 2' % method) # y label\n",
-    "    \n",
-    "    # update filename and plot title\n",
-    "    title = '%s plot' % method\n",
-    "    filename = '%s' % method\n",
-    "    if color:\n",
-    "        title += ', marker: %s' % color\n",
-    "        filename += '_%s' % color\n",
-    "        plt.colorbar() # display colorbar\n",
-    "    if sample:\n",
-    "        title += '\\n%s' % sample\n",
-    "        filename += '_%s' % sample\n",
-    "    if compnumber:\n",
-    "        title += 'Component #%d' % compnumber\n",
-    "        filename += '_comp%d' % compnumber\n",
-    "    filename += '.png'\n",
-    "    plt.title(title)\n",
-    "    \n",
-    "    dname = 'embedding/markers/' # directory name\n",
-    "    PA.mkdir(os.path.join(pop['output'], dname)) # create directory if needed\n",
-    "    plt.savefig(os.path.join(pop['output'], dname, '%s.png' % filename), dpi=200, bbox_inches='tight') # save figure\n",
-    "    plt.close()"
+    "scatter(pop, method='tsne', sample='CONTROL', compnumber=0, color='CD3D')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatter(pop, method='tsne', sample='CONTROL', compnumber=2, color='CD3D')\n",
-    "scatter(pop, method='tsne', sample='CONTROL', color='CD3D')\n",
-    "scatter(pop, method='tsne', color='CD3D')\n",
-    "scatter(pop, method='tsne', sample='CONTROL', compnumber=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
